--- a/lang/de.json
+++ b/lang/de.json
@@ -131,5 +131,6 @@
   "data_modification_successful": "die datenänderung war erfolgreich",
   "data_modification_failed": "die datenänderung ist fehlgeschlagen",
   "table_not_exist": "die tabelle existiert nicht",
-  "invoice": "rechnung"
+  "invoice": "rechnung",
+  "about_us": "über uns"
 }
