--- a/lang/en.json
+++ b/lang/en.json
@@ -131,5 +131,6 @@
   "data_modification_successful": "the data modification successful",
   "data_modification_failed": "the data modification failed",
   "table_not_exist": "the table does not exist",
-  "invoice": "invoice"
+  "invoice": "invoice",
+  "about_us": "about us"
 }
