Nyelvi fájl további elemek hozzáadsáa

--- a/lang/de.json
+++ b/lang/de.json
@@ -132,5 +132,6 @@
   "data_modification_failed": "die datenänderung ist fehlgeschlagen",
   "table_not_exist": "die tabelle existiert nicht",
   "invoice": "rechnung",
-  "about_us": "über uns"
+  "about_us": "über uns",
+  "page_title": "Super Car Wash"
 }
