--- a/lang/en.json
+++ b/lang/en.json
@@ -132,5 +132,6 @@
   "data_modification_failed": "the data modification failed",
   "table_not_exist": "the table does not exist",
   "invoice": "invoice",
-  "about_us": "about us"
+  "about_us": "about us",
+  "page_title": "Super Car Wash"
 }
