--- a/lang/hu.json
+++ b/lang/hu.json
@@ -133,5 +133,6 @@
   "data_modification_failed": "az adatmódosítás nem sikerült",
   "table_not_exist": "",
   "invoice": "számla",
-  "about_us": "rólunk"
+  "about_us": "rólunk",
+  "page_title": "Super Car Wash"
 }
