--- a/lang/en.json
+++ b/lang/en.json
@@ -238,5 +238,80 @@
   "personal_data":"personal data",
   "appointment_booking":"appointment booking",
   "my_bookings": "my bookings",
-  "postcode_alert":"please provide a valid postal code!"
+  "postcode_alert":"please provide a valid postal code!",
+
+    "services_card": [
+      {
+        "services_name": "exterior_wash",
+        "translated_name": "Exterior Wash",
+        "description": "Transform the exterior of your car with premium cleaning products, making sure all eyes are on you!",
+        "price": 11990
+      },
+      {
+        "services_name": "interior_clean",
+        "translated_name": "Interior Cleaning",
+        "description": "Bring back the freshness and cleanliness inside your vehicle as if you just bought a new car!",
+        "price": 11990
+      },
+      {
+        "services_name": "extra_polishing",
+        "translated_name": "Extra Polishing",
+        "description": "Make your car’s shine irresistible with a special polishing treatment that preserves its brilliance.",
+        "price": 14990
+      },
+      {
+        "services_name": "upholstery_cleaning",
+        "translated_name": "Upholstery Cleaning",
+        "description": "Say goodbye to stubborn stains! Our deep cleaning will restore your upholstery to its fresh and clean state.",
+        "price": 14990
+      },
+      {
+        "services_name": "ceramic_coating",
+        "translated_name": "Ceramic Coating",
+        "description": "Protect your car from scratches and dirt with long-lasting ceramic coating for a glossy finish.",
+        "price": 49990
+      },
+      {
+        "services_name": "engine_wash",
+        "translated_name": "Engine Wash",
+        "description": "A clean engine bay is more than just aesthetics – extend its lifespan with our professional engine wash.",
+        "price": 19990
+      },
+      {
+        "services_name": "quick_wash",
+        "translated_name": "Quick Wash",
+        "description": "Refresh your car in no time – clean results delivered fast, without any compromises!",
+        "price": 11990
+      },
+      {
+        "services_name": "wax_coating",
+        "translated_name": "Wax Coating",
+        "description": "Give your car dazzling protection and water-repellent properties with our premium wax coating.",
+        "price": 24990
+      },
+      {
+        "services_name": "rim_cleaning",
+        "translated_name": "Rim Cleaning",
+        "description": "Restore your rims to their original shine! Effective cleaning to combat tough dirt and grime.",
+        "price": 19990
+      },
+      {
+        "services_name": "full_cleaning",
+        "translated_name": "Full Exterior and Interior Cleaning",
+        "description": "Make your car spotless inside and out with a comprehensive cleaning that will make you love driving again!",
+        "price": 64990
+      },
+      {
+        "services_name": "windshield_polishing",
+        "translated_name": "Windshield Polishing",
+        "description": "Say goodbye to scratches and annoying marks – enjoy crystal-clear visibility with a single polish treatment!",
+        "price": 22990
+      },
+      {
+        "services_name": "sticker_removal",
+        "translated_name": "Sticker Removal",
+        "description": "We remove stickers painlessly without damaging your car’s paintwork.",
+        "price": 9990
+      }
+    ]
 }
