--- a/lang/hu.json
+++ b/lang/hu.json
@@ -241,6 +241,9 @@
   "my_bookings": "foglalásaim",
   "postcode_alert":"Érvényes irányítószámot adjon meg!",
 
+  "exterior_wash": "Külső mosás",
+  "desctiption1": "Varázsolja autója külsejét újjá prémium tisztítószereink erejével, hogy minden tekintetet magára vonzzon!",
+
   
     "services_card": [
       {
